--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "12.1.5",
     "react": "18.1.0",
+    "mongodb": "^4.1.3",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
