--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies-next": "^2.0.4",
+    "mongodb": "^4.1.3",
     "next": "12.1.5",
     "react": "18.1.0",
-    "mongodb": "^4.1.3",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
